--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bb-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Den081985/BB-React-App/",
   "dependencies": {
     "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^5.16.4",
